--- a/MvcProjeKampi/Views/AdminCategory/Index.cshtml
+++ b/MvcProjeKampi/Views/AdminCategory/Index.cshtml
@@ -1,4 +1,9 @@
-﻿
+﻿@using EntityLayer.Concrete
+@model List<Category>
+@*database üzerinden verilerin çekilmesi için entitylayar.concrete dizini projeye dahil edildi.*@
+@* Daha sonra model oluşturuldu. Model verileri listelemek için kullanılacak bileşendir. C# komutları kullanabilmek için ilgili ifadenin başına @ işareti koyulur. Model değer olarak categorilerin listesini tutacak *@
+
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -7,18 +12,22 @@
 <br />
 <table class="table table-bordered">
     <tr>
-        <th>ID</th>
-        <th>Kategori</th>
-        <th>Durum</th>
+        <th>#</th>
+        <th>Kategori Adı</th>
+        <th>Sil</th>
+        <th>Güncelle</th>
+        <th>Başlıklar</th>
     </tr>
-    <tr>
-        <td>1</td>
-        <td>Spor</td>
-        <td>Aktif</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>Yazılım</td>
-        <td>Aktif</td>
-    </tr>        
+    @foreach (var item in Model)
+    {
+        <tr>
+            <th>@item.CategoryID</th>
+            <td>@item.CategoryName</td>
+            <td><a href="#" class="btn btn-danger">Sil</a></td>
+            <td><a href="#" class="btn btn-warning">Güncelle</a></td>
+            <td><a href="#" class="btn btn-primary">Başlıklar</a></td>
+        </tr>
+    }
 </table>
+<a href="/AdminCategory/AddCategory" class="btn btn-info">Yeni Kategori</a> @* Burada yönlendirme işlemi yapılıyor. Category sinifi içerisinde bulunan AddCategory alanına git anlamındadır.  *@
+
