--- a/MvcProjeKampi/Views/AdminCategory/Index.cshtml
+++ b/MvcProjeKampi/Views/AdminCategory/Index.cshtml
@@ -23,8 +23,8 @@
         <tr>
             <th>@item.CategoryID</th>
             <td>@item.CategoryName</td>
-            <td><a href="#" class="btn btn-danger">Sil</a></td>
-            <td><a href="#" class="btn btn-warning">Güncelle</a></td>
+            <td><a href="/AdminCategory/DeleteCategory/@item.CategoryID" class="btn btn-danger">Sil</a></td> @*Oluşrutuğumuz deletecategory actionresultı için burada link veriyoruz. Yani Sil butoununa basılınca DeleteCategory ye gidecek. Giderken de ID götürecek. Bunu da item.categoryid ile yapıyor. Yani her bir sil butonuna ayrı ayrı categoryid gönderilir.*@
+            <td><a href="/AdminCategory/EditCategory/@item.CategoryID" class="btn btn-warning">Güncelle</a></td>
             <td><a href="#" class="btn btn-primary">Başlıklar</a></td>
         </tr>
     }
