--- a/MvcProjeKampi/Views/Heading/Index.cshtml
+++ b/MvcProjeKampi/Views/Heading/Index.cshtml
@@ -46,8 +46,11 @@
                                     <th style="width: 20%">
                                         Başlık Adı
                                     </th>
-                                    <th style="width: 30%">
+                                    <th style="width: 15%">
                                         Oluşturan Yazar
+                                    </th>
+                                    <th style="width: 10%">
+                                        Durum
                                     </th>
                                     <th style="width: 8%" class="text-center">
                                         Kategori
@@ -95,6 +98,9 @@
                                             </li>
                                         </ul>
                                     </td>
+                                    <td>
+                                        @item.HeadingStatus
+                                    </td>
                                     <td class="project-state">
                                         <span class="@color">@item.Category.CategoryName</span>
                                     </td>
@@ -104,12 +110,12 @@
                                             </i>
                                             Yazılar
                                         </a>
-                                        <a class="btn btn-info btn-sm" href="#">
+                                        <a class="btn btn-info btn-sm" href="/Heading/EditHeading/@item.HeadingID">
                                             <i class="fas fa-pencil-alt">
                                             </i>
                                             Düzenle 
                                         </a>
-                                        <a class="btn btn-danger btn-sm" href="#">
+                                        <a class="btn btn-danger btn-sm" href="/Heading/DeleteHeading/@item.HeadingID">
                                             <i class="fas fa-trash">
                                             </i>
                                             Sil
